tests/compose_backend_fail/duplicate_route.stderr
error: method `blit` routed more than once (also at earlier position)
  --> tests/compose_backend_fail/duplicate_route.rs:25:9
   |
25 |         blit => sw,
   |         ^^^^
